# diceware

./: .gitignore  diceware  dictionaries.yml  duration.py  log_level.py  pyproject.toml
